// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not accept arrays containing invalid keys 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "string",
    "path": [
      0,
      0,
    ],
    "received": "number",
  },
]
`;

exports[`should not accept arrays containing invalid values 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "number",
    "path": [
      0,
      1,
    ],
    "received": "string",
  },
]
`;

exports[`should not accept arrays containing non-arrays 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "array",
    "path": [
      0,
    ],
    "received": "null",
  },
]
`;

exports[`should not accept non-arrays 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "array",
    "path": [],
    "received": "null",
  },
]
`;

exports[`should not accept too long tuples 1`] = `
[
  {
    "code": "too_long",
    "length": 3,
    "maxLength": 2,
    "path": [
      0,
    ],
  },
]
`;

exports[`should not accept too short tuples 1`] = `
[
  {
    "code": "too_short",
    "length": 1,
    "minLength": 2,
    "path": [
      0,
    ],
  },
]
`;
